# Anglerfish-AI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  ci.yml  iso.yml
cowrie/: README.md  cowrie.cfg.template  output_anglerfish.py
cowrie/nftables/: anglerfish.nft
cowrie/patches/: 0001-anglerfish-shell.patch  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT.md  AUDIT_TRAIL.md  HONEYTOKENS.md  INCIDENT_RESPONSE.md  INSTALL.md  MODEL_SETUP.md  ONBOARDING.md  PRE_DEPLOY_CHECKLIST.md  PRODUCT.md  ROADMAP.md  RUNBOOK.md  THREAT_MODEL.md  TODO.md  proxmox-lab.md  proxmox.md
docs/design/: STAGE_10_engaged_persistence.md  STAGE_11_decoy_data_poisoning.md  STAGE_12_counter_deception.md  STAGE_13_dashboard_views.md  STAGE_1_llm_defense.md  STAGE_2_lure_subsystem.md  STAGE_3_dashboard_control_plane.md  STAGE_4_2_audit_tailer.md  STAGE_4_session_store.md  STAGE_5_llm_leverage.md  STAGE_6_active_time_wasting.md  STAGE_7_intent_extraction.md  STAGE_8_behavioral_clustering.md  STAGE_9_adaptive_persona.md  TEMPLATE.md
iso/: README.md  build.sh  smoke.sh
iso/auto/: build  clean  config
iso/config/package-lists/: anglerfish.list.chroot
nftables/: anglerfish.nft
proxmox/: anglerfish.json  backup.sh  deploy.sh  restore.sh
proxmox/lab/: anglerfish-lab-pcap.service  host-bridge.conf  reset.sh  snapshot.sh
src/anglerfish/: __init__.py  audit.py
src/anglerfish/bridge/: __init__.py  client.py  defense.py  defense_patterns.py  errors.py  fallback.py  overrides_reader.py  path.py  prompts.py  rate_limit.py  sanitize.py  server.py  service.py  session.py
src/anglerfish/callback/: __init__.py  app.py  routes.py
src/anglerfish/cli/: __init__.py  __main__.py  banner.py
src/anglerfish/config/: __init__.py  models.py  settings.py
src/anglerfish/credentials/: __init__.py  crypto.py  rotation.py  storage.py
src/anglerfish/dashboard/: __init__.py  alerts.py  app.py  audit_reader.py  audit_tailer.py  auth.py  csrf.py  export.py  headers.py  health.py  overrides.py  overrides_publisher.py  rate_limit.py  routes.py  state.py  websocket.py
src/anglerfish/fingerprint/: __init__.py  hashes.py  service.py  ssh.py  tor.py
src/anglerfish/forwarder/: __init__.py  errors.py  event.py  factories.py  hec.py  jsonl.py  service.py
systemd/: README.md  anglerfish-bridge.service  anglerfish-dashboard.service  anglerfish-firewall.service  anglerfish-firstboot.service  anglerfish-geo-update.service  anglerfish-geo-update.timer  anglerfish-lure.service  cowrie.service
tests/: conftest.py  test_audit.py  test_properties.py
tests/bridge/: test_client.py  test_counter_deception_strategy.py  test_defense.py  test_defense_patterns.py  test_embedding_integration.py  test_fallback.py  test_honeytoken_integration.py  test_intent_integration.py  test_overrides_reader.py  test_path.py  test_persistence_integration.py  test_persona_integration.py  test_prompt_injection.py  test_prompts.py  test_rate_limit.py  test_sanitize.py  test_server.py  test_server_auth.py  test_service.py  test_service_counter_deception.py  test_session.py
tests/callback/: test_app.py
tests/cli/: test_banner.py  test_credentials_rotate.py  test_dashboard_subcommand.py  test_geo_update.py  test_lure_subcommand.py
tests/config/: test_counter_deception_config.py  test_models.py  test_settings.py
tests/credentials/: test_crypto.py  test_rotation.py  test_storage.py
tests/dashboard/: test_alerts_endpoint.py  test_app.py  test_audit_tailer.py  test_auth.py  test_clusters_endpoint.py  test_counter_deception_endpoints.py  test_csp_report.py  test_csrf.py  test_export_endpoints.py  test_export_threatintel.py  test_health_endpoints.py  test_honeytokens_endpoint.py  test_intent_endpoints.py  test_overrides.py  test_overrides_publisher.py  test_persistence_endpoint.py  test_persona_endpoints.py  test_rate_limit.py  test_security_headers.py  test_session_detail.py  test_settings_endpoints.py  test_settings_propagation.py  test_similar_endpoint.py  test_spa_xss_browser.py  test_state.py  test_state_persistence.py  test_websocket_security.py
tests/docs/: test_todo_log.py
tests/fingerprint/: test_hashes.py  test_service.py  test_ssh.py  test_tor.py
tests/forwarder/: test_factories.py  test_hec.py  test_jsonl.py  test_service.py
tests/geo/: test_fetch.py  test_lookup.py
tests/honeytokens/: test_generators.py  test_placement.py
tests/integration/: test_cowrie_output.py  test_cowrie_shell.py  test_cowrie_shell_adapter.py
tests/intel/: test_embeddings.py  test_intent.py
tests/llm/: test_budget.py  test_client.py  test_embed.py  test_streaming.py  test_structured.py  test_warmup.py
tests/llm_defense/: test_corpus.py  test_persistence_classifier.py  test_timebomb_prompt.py  test_wasting_clarification.py
tests/lure/: test_bait_nic.py  test_banner.py  test_bridge_client.py  test_cat_garble_integration.py  test_commands.py  test_config.py  test_fakefs.py  test_fallback.py  test_garble.py  test_http_stub.py  test_keys.py  test_latency_jitter.py  test_per_ip_limiter.py  test_runner.py  test_server.py  test_session.py
tests/models/: test_credentials.py  test_fingerprint.py  test_geo.py  test_session.py  test_threat.py
tests/persistence/: test_classifier.py  test_patterns.py
tests/persona/: test_registry.py  test_schema.py  test_selector.py
tests/sessions/: test_counter_deception_pins.py  test_embedding_persistence.py  test_honeytokens_persistence.py  test_intent_persistence.py  test_migrate.py  test_persistence_persistence.py  test_reader.py  test_store.py
tests/threat/: test_alerter.py  test_scorer.py  test_service.py  test_techniques.py
tests/wizard/: test_cli.py  test_counter_deception_prompt.py  test_honeytokens_prompt.py  test_network.py  test_persistence.py  test_preflight.py  test_render.py  test_secrets.py  test_sshkey.py  test_wizard.py
tools/: clean_logo.py  generate_banner.py
(+230 files in other folders)
